src/components/modal/NewPasswordModal.scss
.Modal__Backdrop {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0.2);
  width: 100%;
  height: 100vh;
  z-index: 99;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;
}

.New__Password__Modal {
  background-color: var(--background);
  width: 500px;
  height: 400px;
  z-index: 9999;
  border: 1px solid black;
  border-radius: 10px;
  padding: 20px;
  display: flex;
  flex-direction: column;
}

.Modal__Header {
  display: flex;
  flex-direction: row;
  align-items: center;

  .Modal__Header__Info {
    span {
      color: #6c7284;
      font-size: 14px;
    }
  }

  .Modal__Close {
    margin-left: auto;
    margin-right: 5px;
    color: #6c7284;

    svg {
      width: 24px;
      height: 24px;
    }
  }
}

.Modal__Form {
  height: 100%;
  display: flex;
  justify-content: space-between;
  margin-top: 40px;
}

.Modal__Form__Inputs {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.Modal__Form__Images {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-self: flex-end;
  gap: 20px;
}

.Modal__Form__Buttons {
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  .Modal__Form__Buttons__Images {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-self: flex-end;
    gap: 20px;
  }

  .Modal__Form__Buttons__Actions {
    display: flex;
    gap: 10px;
    align-self: flex-end;

    button {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100px;
      height: 38px;
    }
  }
}

